fix(nossas): card content limit overflow

--- a/app/nossas/design/static/design/scss/card.scss
+++ b/app/nossas/design/static/design/scss/card.scss
@@ -12,6 +12,13 @@
 
     .card-body {
         position: relative;
+
+        .card-body-content {
+            height: 132px;
+            width: 100%;
+            overflow: hidden;
+            line-height: 22px;
+        }
     
         h1, h2, h3, h4 {
             font-size: 24px;
